# auto-bibli

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 53f0cfaa19b8_create_table_for_biencentrisduplex.py
centris/: __init__.py  centris_scraper.py  dashboard.py  data_models.py  data_quality.py  db_models.py  main.py  mappers.py  utils.py
centris/backend/: api_test.py  centris_scraper.py  db_models.py  main.py  mappers.py  utils.py
centris/frontend/: components.py  dashboard.py  data_quality.py  utils.py
db/: database.db
notebooks/: bibli_scrape.ipynb  bibli_scrape.md  centris_scrape.ipynb  centris_scrape.md  test.ipynb
src/: centris_scraper.py  db_models.py  main.py  models.py  utils.py
tests/examples/: centris_26999986.html
thinkerview/backend/: database.py  main.py  think_scraper.py
