[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["arthurlemon <coucou@example.com>"]
readme = "README.md"
packages = [{include = "centris/backend"},
    {include = "centris/frontend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
tqdm = "^4.67.1"

[tool.poetry.group.backend.dependencies]
requests = "^2.32.3"
selectolax = "^0.3.27"
pydantic = "^2.10.4"
playwright = "^1.49.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.41.1"
pandas = "^2.2.3"
ydata-profiling = "^4.12.1"
geopy = "^2.4.1"

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.3.1"
jupytext = "^1.16.4"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pre-commit = "^4.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
